made changes in timer, support part, in a way of fully connecting the models to the interface.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,24 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.1
-  fl_chart: ^0.65.0  # For charts
-  http: ^0.13.6      # For API calls to Python backend
-  audioplayers: ^5.2.1  # For ambient sounds
-  
+  fl_chart: ^1.1.1  # For charts
+  http: ^1.6.0      # For API calls to Python backend
+  audioplayers: ^6.5.1
+  flutter_local_notifications: ^20.1.0
+  wakelock_plus: ^1.1.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/audio/lofi1.mp3
+    - assets/audio/lofi2.mp3
+    - assets/audio/lofi3.mp3
+    - assets/audio/lofi4.mp3
+    - assets/audio/lofi5.mp3
+    - assets/images/
     
